--- a/tresurehunt/rules.html
+++ b/tresurehunt/rules.html
@@ -14,10 +14,13 @@
         
         <h1>RULES</h1>
         <h2 id="displayData"></h2>
-        <h3>point 1</h3>
-        
-        <h3>point 2</h3>
-        <h3>point 1</h3> <br>
+        <h3>Three participants per Team.</h3>
+        <h3>One of the student must have smart phone.</h3>
+        <h3>This event consists of five clues.</h3>
+        <h3>Each answer is leading to the next clue.</h3>
+        <h3>The clues are to be found in the correct order.</h3>
+        <h3>Clue should not be skipped.</h3>
+        <h3>GK and preliminary questions will be given as clues.</h3><br>
         <div> 
           <button onclick="next()">Let's Play</button>
         <div>
