--- a/tresurehunt/ques/ques2.html
+++ b/tresurehunt/ques/ques2.html
@@ -23,15 +23,15 @@
             {   
                 loot=document.getElementById("ans")
                 n=String(loot.value);
-                if(n==="rhance" && DAta==="ZenithAI")
+                if(n==="rhange" && DAta==="ZenithAI")
                 {
                     window.location.href = '../spot/mca.html';
                 }
-                else if(n==="rhance" && DAta==="copyai")
+                else if(n==="rhange" && DAta==="copyai")
                 {
                     window.location.href = '../spot/tamil.html';
                 }
-                else if(n==="rhance" && DAta==="aixcoder")
+                else if(n==="rhange" && DAta==="aixcoder")
                 {
                     window.location.href = '../spot/english.html';
                 }
