--- a/tresurehunt/ques/ques4.html
+++ b/tresurehunt/ques/ques4.html
@@ -30,11 +30,11 @@
                 }
                 else if(n==="1,2" && DAta==="PerplexityAI")
                 {
-                    window.location.href = '../spot/mba.html';
+                    window.location.href = '../spot/library.html';
                 }
                 else if(n==="1,2" && DAta==="Salesforce")
                 {
-                    window.location.href = '../spot/mca.html';
+                    window.location.href = '../spot/zoology.html';
                 }
                 
                 else {
