--- a/tresurehunt/ques/ques5.html
+++ b/tresurehunt/ques/ques5.html
@@ -30,7 +30,7 @@
                 }
                 else if(n==="sai" && DAta==="Salesforce")
                 {
-                    window.location.href = '../spot/mca.html';
+                    window.location.href = '../spot/swimming.html';
                 }
                 else if(n==="sai" && DAta==="Claude")
                 {
