--- a/tresurehunt/spot/bcomca.html
+++ b/tresurehunt/spot/bcomca.html
@@ -9,7 +9,7 @@
         <br><br><br><br><br><br><br><br>
     </div>
     <div class="form">
-        <h2>Department of B>COM CA SF</h2>
+        <h2>Department of B.COM CA SF</h2>
         
         <form method="" action="../scan.html">
             <h3>Orchestra room wall</h3><br>
