--- a/tresurehunt/ques/ques7.html
+++ b/tresurehunt/ques/ques7.html
@@ -40,6 +40,22 @@
                 {
                     window.location.href = '../spot/micro.html';
                 }
+                else if(n==="48j23" && DAta==="NovaAI")
+                {
+                    window.location.href = '../spot/bcomca.html';
+                }
+                else if(n==="48j23" && DAta==="soundraw")
+                {
+                    window.location.href = '../spot/mba.html';
+                }
+                else if(n==="48j23" && DAta==="Jasper")
+                {
+                    window.location.href = '../spot/maths.html';
+                }
+                else if(n==="48j23" && DAta==="Writesonic")
+                {
+                    window.location.href = '../spot/micro.html';
+                }
                 else {
                 alert('Wrong Answer Try Again');
                 }
