--- a/tresurehunt/ques/ques22.html
+++ b/tresurehunt/ques/ques22.html
@@ -44,6 +44,22 @@
                 {
                     window.location.href = '../spot/mca.html';
                 }
+                else if(n==="math.min" && DAta==="ZenithAI")
+                {
+                    window.location.href = '../spot/tamil.html';
+                }
+                else if(n==="math.min" && DAta==="soundraw")
+                {
+                    window.location.href = '../spot/bcomca.html';
+                }
+                else if(n==="math.min" && DAta==="aixcoder")
+                {
+                    window.location.href = '../spot/bvoc.html';
+                }
+                else if(n==="math.min" && DAta==="Claude")
+                {
+                    window.location.href = '../spot/mca.html';
+                }
                 else {
                 alert('Wrong Answer Try Again');
                 }
