--- a/tresurehunt/rules.html
+++ b/tresurehunt/rules.html
@@ -3,7 +3,7 @@
     <!----------- Color code #OB4251, #87BBD7 ,#F2C864 ----------->
     <title>KenIT'24</title>
     <link rel="stylesheet" href="rules.css">
-    <link rel="stylesheet" href="main.css">
+<!--     <link rel="stylesheet" href="main.css"> -->
 </head>
 <body>
     <div class="headerp">
